--- a/SimpleServer/SimpleServer.csproj
+++ b/SimpleServer/SimpleServer.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpServer.cs" />
     <Compile Include="HttpProcessor.cs" />
+    <Compile Include="AnimalHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
