--- a/SimpleServer/SimpleServer.csproj
+++ b/SimpleServer/SimpleServer.csproj
@@ -51,6 +51,8 @@
     <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmployeeHandler.cs" />
+    <Compile Include="HabitatHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HttpServer.cs" />
